added all fields for the user
